# phising-detector

./: .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: integration-tests.yml  linter.yml  unit-tests.yml
docs/: ROADMAPv1.md  architecture_v1.mmd
docs/how-to/: CONTRIBUTING.md
src/: app_factory.py  main.py  root_router.py
src/analysis/: routes.py  schema.py  url_analyzer.py
src/analysis/fuzz_check/: controller.py
src/analysis/redirect_tracer/: controller.py  routes.py  schema.py
src/analysis/ssl_tls_check/: controller.py  schema.py
src/analysis/whois_check/: controller.py
src/api/api_v1/: router_api_v1.py
src/core/: config.py  constants.py  logger.py  logger_config.py
src/scoring/: constants.py  scorer.py
tests/integration/: conftest.py  test_redirect_tracer.py  test_root_router.py  test_url_analzyer.py
tests/unit/: conftest.py  test_fuzz_check.py  test_redirect_tracer.py  test_sample.py  test_scorer.py  test_sslcheck.py  test_url_analyzer.py  test_whois_check.py
utils/: constants.py  helpers.py  top-100-pl.json
